# magic_cpp

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: auto_registering_factory.cpp  compile_time_brain_fuck.cpp  compile_time_string_view_concat.cpp  dependency_injection.cpp
